Updated copyright year.

--- a/docs.html
+++ b/docs.html
@@ -3070,7 +3070,7 @@ the <a href="https://github.com/pillarjs/cookies">Cookies NodeJS module</a>.</p>
 
 <h2 id="license">License</h2>
 
-<p>Copyright 2020 - Rafael A. Pacheco-Palencia (@eighthjouster)</p>
+<p>Copyright 2020-2021 Rafael A. Pacheco-Palencia (@eighthjouster)</p>
 
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
 
@@ -3118,7 +3118,7 @@ the <a href="https://github.com/pillarjs/cookies">Cookies NodeJS module</a>.</p>
 
       </div>
       <footer>
-          This website is &copy; 2020 JSCause.org - No cookies used.
+          This website is &copy; 2020-2021 JSCause.org - No cookies used.
       </footer>
   </body>
 </html>
