--- a/features.html
+++ b/features.html
@@ -126,7 +126,7 @@
 
       </div>
       <footer>
-          This website is &copy; 2020 JSCause.org - No cookies used.
+          This website is &copy; 2020-2021 JSCause.org - No cookies used.
       </footer>
   </body>
 </html>
