--- a/faq.html
+++ b/faq.html
@@ -300,7 +300,7 @@ rt.unsafePrint(JSON.stringify({ randomNumber: `${Math.random()}` }));
 
       </div>
       <footer>
-          This website is &copy; 2020 JSCause.org - No cookies used.
+          This website is &copy; 2020-2021 JSCause.org - No cookies used.
       </footer>
   </body>
 </html>
