--- a/tutorial.html
+++ b/tutorial.html
@@ -1600,7 +1600,7 @@ tutorial_014_tomato_salad.png
 
       </div>
       <footer>
-          This website is &copy; 2020 JSCause.org - No cookies used.
+          This website is &copy; 2020-2021 JSCause.org - No cookies used.
       </footer>
   </body>
 </html>
