--- a/tutorial.html
+++ b/tutorial.html
@@ -176,7 +176,7 @@ INFO: Server 0 listening on port 3000
 <p><img src="images/tutorial_002.gif" alt="Web browser window displaying the phrase 'It works!'" title="It works! JSCause is running!" />
 <span>It works! JSCause is running!</span></p>
 
-<p><strong>Important</strong>: Your browser may warn you that the site is not secure.  That’s because we’re using a placeholder SSL certificate in order to test and use HTTPS connections.  These certificates are <strong>not</strong> suitable for production!  If you use these certs, your users will get a security warning in their browsers.  <strong>You must provide your valid private key file and certificate file</strong>.</p>
+<p><strong>Important</strong>: Your browser may warn you that the site is not secure.  That’s because we’re using a placeholder SSL certificate in order to test and use HTTPS connections.  These certificates are <strong>not</strong> suitable for production!  If you use these certs, your users will get a security warning in their browsers.  <strong>You must provide your valid private key file and certificate file</strong>.  More information in <a href="https://jscause.org/docs.html#why-does-the-browser-complain-about-security-when-accessing-a-jscause-site-during-development">the FAQ</a>, and in the <a href="https://jscause.org/docs.html#sitejson-configuring-your-websites-details">site configuration section</a> in the documentation (specifically, the <code>httpsCertFile</code> and <code>httpsKeyFile</code> configuration attributes.)</p>
 
 <h4 id="choose-your-own-adventure">Choose your own adventure</h4>
 
