Added link to official Youtube channel.

--- a/tutorial.html
+++ b/tutorial.html
@@ -59,7 +59,7 @@
 
 <h3 id="if-you-prefer-a-video">If you prefer a video:</h3>
 
-<p>Check out our Youtube channel (coming soon.)</p>
+<p>Check out <a href="https://www.youtube.com/channel/UCRX2JsZUI9YEF65XG3_4u8w">our official Youtube channel</a>.</p>
 
 <h3 id="or-if-you-prefer-good-old-text-keep-reading">Or if you prefer good old text, keep reading.</h3>
 
