Fixed download links.

--- a/download.html
+++ b/download.html
@@ -55,14 +55,14 @@
           <h1>Download JSCause</h1>
       </div>
       <div class="content">
-          <p>The current version is <a href="https://github.com/eighthjouster/jscause/releases/tag/V0.9.4-alpha">V0.9.4</a>.</p>
+          <p>The current version is <a href="https://github.com/eighthjouster/jscause/releases/tag/v0.9.4-alpha">v0.9.4</a>.</p>
 
 <p>JSCause requires <a href="https://nodejs.org">NodeJS</a>.  Please make sure you have it installed in your system.  Any version equal or above 12.x should be fine.</p>
 
 <p>There are two download options:</p>
 
 <h2 id="option-1-stand-alone-package-it-only-requires-nodejs">Option 1: Stand-alone package (it only requires NodeJS)</h2>
-<p><a href="https://github.com/eighthjouster/jscause/releases/download/V0.9.4-alpha/jscause_standalone-0.9.4-alpha.zip">Download jscause_standalone-0.9.4-alpha.zip</a> from our <a href="https://github.com/eighthjouster/jscause/releases">Github releases page</a>.</p>
+<p><a href="https://github.com/eighthjouster/jscause/releases/download/v0.9.4-alpha/jscause_standalone-v0.9.4-alpha.zip">Download jscause_standalone-v0.9.4-alpha.zip</a> from our <a href="https://github.com/eighthjouster/jscause/releases">Github releases page</a>.</p>
 
 <h2 id="option-2-installation-via-npm">Option 2: Installation via NPM</h2>
 <p>On a terminal, use the following command:</p>
@@ -91,7 +91,7 @@
 
 <p>The current vesion is V1, which is compatible with JSCause V0.9.4 and up.</p>
 
-<p>Download the <strong><a href="https://github.com/eighthjouster/jscause/releases/download/V0.9.4-alpha/jscause_site_template-v1.zip">example site project here</a></strong>.</p>
+<p>Download the <strong><a href="https://github.com/eighthjouster/jscause/releases/download/v0.9.4-alpha/site_template-v0.9.4-alpha.zip">example site project here</a></strong>.</p>
 
 <p>It will always be available from our <a href="https://github.com/eighthjouster/jscause/releases">Github releases page</a>.</p>
 
