No extra paren.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <p>If you want to combine HTML and code, go ahead and do it.  Or if you prefer to keep things separate, sure thing!</p>
 
-<p>Can’t wait to try JSCause out? It’s easy to install.  <strong><a href="/download.html">Download it today</a>)</strong>.</p>
+<p>Can’t wait to try JSCause out? It’s easy to install.  <strong><a href="/download.html">Download it today</a></strong>.</p>
 
 <p>Here is an example “Hello, World!” program in JSCause (notice the embedded Javascript!):</p>
 
